# edge-infer-gateway

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  requirements.dev.txt  requirements.orchestrator.txt
.github/workflows/: ci.yml
clients/cpp/: CMakeLists.txt  eig_client.cpp  eig_stream.cpp
clients/python/: gateway_client.py  gateway_stream.py
clients/python/examples/: bench.py  benchmark.py  classify_image.py  detect_image_yolov5.py  detect_stream_ssd.py  detect_stream_yolov5.py
config/: models.yaml  pipelines.yaml
docker/: Dockerfile  Dockerfile.jetson  compose.yml  entrypoint.sh
docs/: ARCHITECTURE.md  SYSTEM_DESIGN.md
include/: gateway.hpp  model_manager.hpp  protocol.hpp  trt_runner.hpp
orchestrator/: __init__.py  app.py  config.py  gateway_pool.py  messages.py  metrics.py  pipeline.py  serialization.py  utils.py
orchestrator/actions/: base.py  dispatcher.py  log.py  mqtt.py  webhook.py
orchestrator/agents/: __init__.py  base.py  threshold.py  vision.py
orchestrator/connectors/: __init__.py  base.py  ble.py  camera.py  mqtt.py
orchestrator/plugins/: __init__.py  env.py  vision.py
src/: gateway.cpp  main.cpp  model_manager.cpp  trt_runner.cpp
tests/: __init__.py  conftest.py  test_integration.py
tools/: build_engine.sh  build_engines_yolo.sh  convert_ssd_mobilenet.py  download_assets.sh  fetch_mobilenet_ssd.sh  simulate_sensor.py
