cmake_minimum_required(VERSION 3.16)
project(eig_client CXX)
add_executable(eig-client clients/cpp/eig_client.cpp)
add_executable(eig-stream clients/cpp/eig_stream.cpp)

find_package(OpenCV QUIET)
if(OpenCV_FOUND)
  target_compile_definitions(eig-client PRIVATE USE_OPENCV=1)
  target_link_libraries(eig-client PRIVATE ${OpenCV_LIBS})
  target_compile_definitions(eig-stream PRIVATE USE_OPENCV=1)
  target_link_libraries(eig-stream PRIVATE ${OpenCV_LIBS})
endif()
target_compile_features(eig-client PRIVATE cxx_std_17)
target_compile_features(eig-stream PRIVATE cxx_std_17)
